# esp32s3_mqtt_relay

./: CMakeLists.txt  CMakeLists.txt.old  README.md  esp32s3_mqtt_ddsu666.sln  esp32s3_mqtt_ddsu666.vgdbproj  esp32s3_mqtt_relay.sln  esp32s3_mqtt_relay.vgdbproj  partitions.csv  sdkconfig  sdkconfig.old
.visualgdb/CodeDB/esp32s3_mqtt_ddsu666.vgdbproj-Debug-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  app_main.npa00  app_main.npd  codedb.lck  led.hpa00  led.hpd  led.npa00  led.npd  mqtt4.npa00  mqtt4.npd  tmp00000004.npa00  tmp00000006.npa00  tmp00000009.npa00  tools.npa00  tools.npd  tools.rdb  uart-00001.npa00  uart-00001.npd  watchdog.npa00  watchdog.npd  wifimanager.npa00  wifimanager.npd  wifimanager.rdb
.visualgdb/CodeDB/esp32s3_mqtt_ddsu666.vgdbproj-Release-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  app_main.hpd  app_main.npa00  app_main.npa01  app_main.npd  app_main.rdb  button.npa00  button.npa01  button.npd  button.rdb  buzzer.npa00  buzzer.npa01  buzzer.npd  codedb.lck  esp_lvgl_port.npa00  esp_lvgl_port.npd  esp_lvgl_port.rdb  esp_rom_sys.rdb  esp_system.rdb  gpio_init.npa00  gpio_init.npa01  gpio_init.npd  ir-00001.npa00  ir-00001.npd  ir-00001.rdb  ir_nec_decoder-00001.npa00  ir_nec_decoder-00001.npa01  ir_nec_decoder-00001.npd  ir_nec_decoder-00001.rdb  lcd.npa00  (+106 more)
components/server_certs/: ca_cert.pem
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  button.c  button.h  buzzer.c  buzzer.h  form_parser.c  form_parser.h  gpio_init.c  gpio_init.h  ir.c  ir.h  ir_nec_decoder.c  ir_nec_decoder.h  ir_nec_encoder.h  lcd.c  lcd.h  led.c  led.h  mqtt4.c  mqtt4.h  ota.c  ota.h  switch.c  switch.h  tools.c  tools.h  uart.c  uart.h  version.h  watchdog.c  watchdog.h  web_handler.c  web_handler.h  wifimanager.c  wifimanager.h
main/front/: config.json
others/: IoTMQTTPanel-241215_130105.json
(+813 files in other folders)
